@@ -76,3 +76,8 @@ message TReqSetUserStatistics
 }
 
 ////////////////////////////////////////////////////////////////////////////////
+
+message TReqRecomputeMembershipClosure
+{ }
+
+////////////////////////////////////////////////////////////////////////////////
