@@ -6,6 +6,7 @@
 #    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
 #    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.
 
+* babenko: Delayed recomputation of membership closure. Update masters via snapshot.
 * ermolovd: Stricter schema validation. Update masters via snapshot.
 * shakurov: Transaction abort has changed its sematics. Update masters via snapshot.
 * babenko: YT-9991. Change use permission checks for bundles.  Update masters via snapshot.
